🍿💧 Checkpoint ./miniGame/ingredients.js:30594728/426 ./style.css:30594676/10:30594728/382 ./index.html:30594728/9

--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
-html, body {
-    margin: 0;
-    padding: 0;
-  }
+body {
+  background: white;
+  display: flex;
+  height: 100vh;
+  margin: 0;
+}
+
+canvas {
+  margin: auto;
+  background: navy;
+  width: 100vh;
+  height: 100vh;
+  image-rendering: pixelated;
+}
+
+@media (orientation: portrait) {
   canvas {
-    display: block;
-    margin-left:100px
+    width: 100vw;
+    height: 100vw;
   }
-  
+}
