--- a/style.css
+++ b/style.css
@@ -6,16 +6,18 @@ body {
 }
 
 canvas {
+  margin-top: 30px;
   margin: auto;
   background: navy;
-  width: 100vh;
-  height: 100vh;
+  width: 100vw;
+  height: 90vh;
   image-rendering: pixelated;
 }
 
-@media (orientation: portrait) {
+@media (orientation: landscape) {
   canvas {
-    width: 100vw;
-    height: 100vw;
+    margin-top: 100px;
+    width: 80vw;
+    height: 80vh;
   }
 }
