🌇🏙 Checkpoint ./style.css:30594728/34

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ canvas {
   width: 100vw;
   height: 90vh;
   image-rendering: pixelated;
+  position: absolute;
 }
 
 @media (orientation: landscape) {
