--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background: white;
-  display: flex;
+  display: inline;
   height: 100vh;
   margin: 0;
 }
@@ -9,8 +9,8 @@ canvas {
   margin-top: 30px;
   margin: auto;
   background: navy;
-  width: 100vw;
-  height: 90vh;
+  width: 1920px;
+  height: 1080px;
   image-rendering: pixelated;
   position: absolute;
 }
@@ -18,8 +18,8 @@ canvas {
 @media (orientation: landscape) {
   canvas {
     margin-top: 100px;
-    width: 80vw;
-    height: 80vh;
+    width: 1920px;
+    height: 1080px;
   }
 }
 
