🎗😎 Checkpoint ./characters/Raven.js:30594728/15 ./SplashScreen.js:30594728/8 ./style.css:30594676/87

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ canvas {
   height: 1080px;
   image-rendering: pixelated;
   position: absolute;
+   align-content: center;
+  
 }
 
 @media (orientation: landscape) {
