🏑🎠 Checkpoint ./index.html:30594728/10798 ./style.css:30594728/67

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ canvas {
   margin-top: 30px;
   margin: auto;
   background: navy;
+  text-align: center;
+  font-size: 48px;
   width: 1920px;
   height: 1080px;
   image-rendering: pixelated;
