--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ canvas {
   background: navy;
   width: 1440px;
   height: 810px;
-  image-rendering: pixelated;
+  font-family: Verdana, sans-serif;
   position: relative;
 }
 
