--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: white;
+  background-image: url("https://cdn.glitch.com/f9aed2f6-b263-4ccf-a15b-15c9b3d05497%2Fpixel-heart.png?v=1622659858338");
   display: inline;
   height: 100vh;
   margin: 0;
