🌃🌁 Checkpoint ./index.html:30594676/67 ./style.css:30594676/447 ./SplashScreen.js:30594676/16

--- a/style.css
+++ b/style.css
@@ -5,7 +5,16 @@ body {
   margin: 0;
   font-family: Verdana, sans-serif;
   font-color: black;
-  font-size: 24px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 65px;
+  }
+p
+{
+  text-align: center;
+  font-size: 28px;
 }
 
 canvas {
